client feat: add styles to fix buttons color on mobile and update video component

--- a/client/src/modules/video-banner/components/video/Video.module.scss
+++ b/client/src/modules/video-banner/components/video/Video.module.scss
@@ -5,6 +5,9 @@
 
 	z-index: -1;
 
+	-webkit-appearance: none;
+	appearance: none;
+
 	&::-webkit-media-controls {
 		display: none !important;
 	}
